Added work with comment in Controller